--- a/package.json
+++ b/package.json
@@ -3,14 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@steveeeie/react-page-transition": "^1.2.1",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "@themesberg/flowbite": "^1.2.0",
     "gh-pages": "^3.1.0",
+    "install": "^0.13.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "^4.0.3",
-    "tailwindcss": "^2.2.4",
+    "react-icons": "^4.3.1",
+    "react-router": "^6.2.1",
+    "react-router-dom": "^6.2.1",
+    "react-scripts": "^5.0.0",
+    "react-transition-group": "^4.4.2",
+    "react-tsparticles": "^1.38.0",
+    "styled-components": "^5.3.3",
     "web-vitals": "^1.1.1"
   },
   "homepage": "https://JustinBear99.github.io/mywebsite",
@@ -38,5 +46,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.1",
+    "postcss": "^8.4.5",
+    "tailwindcss": "^3.0.8"
   }
 }
