--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "styled-components": "^5.3.3",
     "web-vitals": "^1.1.1"
   },
-  "homepage": "https://JustinBear99.github.io",
+  "homepage": "https://justinbear99.github.io",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
